layered architecture, swagger update and few fixes
