# src/config/swagger.json
@@ -13,22 +13,74 @@
   "basePath": "/api",
   "tags": [
     {
-    "name": "Items",
-    "description": "API for users in the system"
+      "name": "Items",
+      "description": "API for users in the system"
     },
     {
-    "name": "Operations",
-    "description": "API to control all operations"
+      "name": "Operations",
+      "description": "API to control all operations"
+    },
+    {
+      "name": "Authentication",
+      "description": "API for user registration and login"
     }
   ],
   "schemes": ["http"],
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "paths": {
+    "/register": {
+      "post": {
+        "tags": ["Authentication"],
+        "summary": "Register a new user",
+        "parameters": [
+          {
+            "name": "user",
+            "in": "body",
+            "description": "User registration data",
+            "schema": {
+              "$ref": "#/definitions/schemas/RegisterUser"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User registration successful"
+          },
+          "400": {
+            "description": "Invalid request data"
+          }
+        }
+      }
+    },
+    "/login": {
+      "post": {
+        "tags": ["Authentication"],
+        "summary": "Login with user credentials",
+        "parameters": [
+          {
+            "name": "credentials",
+            "in": "body",
+            "description": "User login credentials",
+            "schema": {
+              "$ref": "#/definitions/schemas/LoginCredentials"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Login successful"
+          },
+          "401": {
+            "description": "Invalid credentials"
+          }
+        }
+      }
+    },
     "/allItems": {
       "get": {
         "tags": ["Items"],
-        "summary": "Get all items in system",
+        "summary": "Get all items in the system",
         "responses": {
           "200": {
             "description": "OK"
@@ -36,23 +88,22 @@
         }
       }
     },
-
     "/addItem": {
       "post": {
         "tags": ["Items"],
-        "summary": "adds Item to database",
-        "description": "adds Item to database",
+        "summary": "Add item to the database",
+        "description": "Add item to the database",
         "parameters": [
           {
-          "name": "user",
-          "in": "body",
-          "description": "User that we want to create",
-          "schema": {
-            "$ref": "#/definitions/schemas/addItem"
-          }
+            "name": "item",
+            "in": "body",
+            "description": "Item that we want to create",
+            "schema": {
+              "$ref": "#/definitions/schemas/AddItem"
+            }
           }
         ],
-        "responses":{
+        "responses": {
           "200": {
             "description": "OK"
           },
@@ -62,22 +113,21 @@
         }
       }
     },
-
     "/updateItem": {
       "put": {
         "tags": ["Items"],
         "summary": "Update item with given ID",
         "parameters": [
           {
-            "name": "user",
+            "name": "item",
             "in": "body",
-            "description": "User with new values of properties",
+            "description": "Item with new values of properties",
             "schema": {
-              "$ref": "#/definitions/schemas/updateItem"
+              "$ref": "#/definitions/schemas/UpdateItem"
             }
           }
         ],
-        "responses":{
+        "responses": {
           "200": {
             "description": "OK"
           },
@@ -90,11 +140,10 @@
         }
       }
     },
-
     "/allOrders": {
       "get": {
         "tags": ["Operations"],
-        "summary": "Get all operations in system",
+        "summary": "Get all operations in the system",
         "responses": {
           "200": {
             "description": "OK"
@@ -102,24 +151,23 @@
         }
       }
     },
-
     "/buyOrder": {
       "post": {
         "tags": ["Operations"],
         "summary": "Create new buy order",
         "parameters": [
           {
-          "name": "user",
-          "in": "body",
-          "description": "Order that we want to create",
-          "schema": {
-            "$ref": "#/definitions/schemas/Orders"
-          }
+            "name": "order",
+            "in": "body",
+            "description": "Order that we want to create",
+            "schema": {
+              "$ref": "#/definitions/schemas/Order"
+            }
           }
         ],
-        "responses":{
+        "responses": {
           "200": {
-            "description": "Sell order was successful"
+            "description": "Buy order was successful"
           },
           "400": {
             "description": "Item not found or Invalid request data"
@@ -127,22 +175,21 @@
         }
       }
     },
-
     "/sellOrder": {
       "post": {
         "tags": ["Operations"],
         "summary": "Create new sell order",
         "parameters": [
           {
-          "name": "user",
-          "in": "body",
-          "description": "sell order that we want to create",
-          "schema": {
-            "$ref": "#/definitions/schemas/Orders"
-          }
+            "name": "order",
+            "in": "body",
+            "description": "Sell order that we want to create",
+            "schema": {
+              "$ref": "#/definitions/schemas/Order"
+            }
           }
         ],
-        "responses":{
+        "responses": {
           "200": {
             "description": "Sell order was successful"
           },
@@ -151,11 +198,11 @@
           }
         }
       }
-    }  
+    }
   },
-  "definitions":{
+  "definitions": {
     "schemas": {
-      "addItem": {
+      "AddItem": {
         "required": ["pavadinimas", "aprasymas", "pirkimo_suma", "pardavimo_suma"],
         "properties": {
           "pavadinimas": {
@@ -171,16 +218,16 @@
             "example": 2.15
           },
           "pardavimo_suma": {
-            "type":"number",
+            "type": "number",
             "example": 6.18
           }
         }
       },
-      "updateItem": {
+      "UpdateItem": {
         "required": ["id"],
         "properties": {
           "id": {
-            "type":"string",
+            "type": "string",
             "example": 1
           },
           "pavadinimas": {
@@ -196,24 +243,50 @@
             "example": 2.15
           },
           "pardavimo_suma": {
-            "type":"number",
+            "type": "number",
             "example": 6.18
           }
         }
       },
-    "Orders": {
-      "required": ["produkto_id", "kiekis"],
-      "properties": {
-        "produkto_id":{
-          "type":"number",
-          "example": 1
-        },
-        "kiekis":{
-          "type":"number",
-          "example": 12
+      "Order": {
+        "required": ["produkto_id", "kiekis"],
+        "properties": {
+          "produkto_id": {
+            "type": "number",
+            "example": 1
+          },
+          "kiekis": {
+            "type": "number",
+            "example": 12
+          }
+        }
+      },
+      "RegisterUser": {
+        "required": ["vartotojo_vardas", "slaptazodis"],
+        "properties": {
+          "vartotojo_vardas": {
+            "type": "string",
+            "example": "john_doe"
+          },
+          "slaptazodis": {
+            "type": "string",
+            "example": "password"
+          }
+        }
+      },
+      "LoginCredentials": {
+        "required": ["vartotojo_vardas", "slaptazodis"],
+        "properties": {
+          "vartotojo_vardas": {
+            "type": "string",
+            "example": "john_doe"
+          },
+          "slaptazodis": {
+            "type": "string",
+            "example": "password"
+          }
         }
       }
     }
-  }
   }
 }
